# Flipkart-WebScreping

./: LICENSE  README.md  main.py  pyproject.toml  scrap_program.py
notebook/: FlipkartScraping.ipynb
